@@ -429,7 +429,7 @@ include_once('include/page_header.php');
 		$result = delete_host($_REQUEST['templateid'], $unlink_mode);
 		$result = DBend($result);
 
-		show_messages($result, S_HOST_DELETED, S_CANNOT_DELETE_HOST);
+		show_messages($result, S_TEMPLATE_DELETED, S_CANNOT_DELETE_TEMPLATE);
 		if($result){
 /*				add_audit(AUDIT_ACTION_DELETE,AUDIT_RESOURCE_HOST,'Host ['.$host['host'].']');*/
 			unset($_REQUEST['form']);
@@ -450,7 +450,7 @@ include_once('include/page_header.php');
 		$del_hosts = CTemplate::get(array('templateids' => $templates, 'editable' => 1));
 		$del_hosts = zbx_objectValues($del_hosts, 'templateid');
 
-		
+
 		$go_result = delete_host($del_hosts, $unlink_mode);
 		$go_result = DBend($go_result);
 
@@ -716,9 +716,9 @@ include_once('include/page_header.php');
 				$host_footer[] = SPACE;
 				$host_footer[] = new CButton('full_clone', S_FULL_CLONE);
 				$host_footer[] = SPACE;
-				$host_footer[] = new CButtonDelete(S_DELETE_SELECTED_HOST_Q, url_param('form').url_param('templateid').url_param('groupid'));
+				$host_footer[] = new CButtonDelete(S_DELETE_TEMPLATE_Q, url_param('form').url_param('templateid').url_param('groupid'));
 				$host_footer[] = SPACE;
-				$host_footer[] = new CButtonQMessage('delete_and_clear', S_DELETE_AND_CLEAR, S_DELETE_SELECTED_HOSTS_Q, url_param('form').
+				$host_footer[] = new CButtonQMessage('delete_and_clear', S_DELETE_AND_CLEAR, S_DELETE_AND_CLEAR_TEMPLATE_Q, url_param('form').
 					url_param('templateid').url_param('groupid'));
 			}
 			array_push($host_footer, SPACE, new CButtonCancel(url_param('groupid')));
@@ -924,7 +924,7 @@ include_once('include/page_header.php');
 // GO{
 		$goBox = new CComboBox('go');
 		$goBox->addItem('export', S_EXPORT_SELECTED);
-		
+
 		$goOption = new CComboItem('delete',S_DELETE_SELECTED);
 		$goOption->setAttribute('confirm',S_DELETE_SELECTED_TEMPLATES_Q);
 		$goBox->addItem($goOption);
